# Vexel-Display

./: .gitignore  README.md
.github/ISSUE_TEMPLATE/: feature.md
.github/release_assets/: README.md
.github/release_notes/: v0.1.2.md  v0.1.3-b.md  v0.1.3-c.md  v0.1.3-d.md  v0.1.3.md
.github/releases/: v0.1.1.md  v0.1.3-a..md  v0.1.3-e.md  v0.1.4-a.md  v0.1.4-b.md  v0.1.4-c.md  v0.1.4.md
.github/workflows/: react-native-ci.yml  release.yml
app/: .gitignore  app.json  package-lock.json  package.json  tsconfig.json
app/src/app/(home)/: _layout.tsx  (+3 more)
app/src/components/: app-tabs.tsx
app/src/state/: app-store.test.ts  app-store.ts
app/src/theme/: ThemeProvider.tsx  colours.ts  lightTheme.ts  sizes.ts  spacing.ts  typography.ts
docs/: architecture.md  classifications.md  commit-standards.md  issue-standards.md
docs/app/: state-ownership.md
docs/testing/: testing-policy.md
emulator/: CMakeLists.txt
emulator/src/: application.cpp  application.h  display_config.h  frame_timer.cpp  frame_timer.h  framebuffer.cpp  framebuffer.h  input_controller.cpp  input_controller.h  main.cpp  vexel_renderer.cpp  vexel_renderer.h
emulator/src/animation/: animation.cpp  animation.h  animation_controller.cpp  animation_controller.h  frame_animation.cpp  frame_animation.h  procedural_animation.cpp  procedural_animation.h
emulator/src/animation/frame_animations/: moving_pixel.cpp  moving_pixel.h
emulator/src/animation/procedural_animations/: gradient.cpp  gradient.h
emulator/src/test_patterns/: gradient.cpp  gradient.h  square.cpp
protocol/: CHANGELOG.md  README.md
(+21 files in other folders)
